News UAT/force-app/main/default/objects/AccountReport__c/fields/IsCustomerPortal__c.field-meta.xml
<CustomField>
    <fullName>IsCustomerPortal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Portal Account</label>
    <type>Checkbox</type>
</CustomField>