News UAT/force-app/main/default/objects/AccountReport__c/fields/Jigsaw__c.field-meta.xml
<CustomField>
    <fullName>Jigsaw__c</fullName>
    <label>Data.com key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>