News UAT/force-app/main/default/objects/AccountReport__c/fields/Language_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Language_Preferences__c</fullName>
    <description>NextGen</description>
    <label>Language Preferences</label>
    <length>255</length>
    <type>Text</type>
</CustomField>