News UAT/force-app/main/default/objects/AccountReport__c/fields/Last_Booking_Classification__c.field-meta.xml
<CustomField>
    <fullName>Last_Booking_Classification__c</fullName>
    <description>Rollup from latest related Booking record.</description>
    <label>Last Booking Classification</label>
    <length>30</length>
    <type>Text</type>
</CustomField>