News UAT/force-app/main/default/objects/AccountReport__c/fields/Last_Booking_Last_Expiry_Appearance__c.field-meta.xml
<CustomField>
    <fullName>Last_Booking_Last_Expiry_Appearance__c</fullName>
    <description>Rollup from latest related Booking record.</description>
    <label>Last Booking Last Expiry - Appearance</label>
    <type>Date</type>
</CustomField>