News UAT/force-app/main/default/objects/AccountReport__c/fields/Last_Booking_Line_Item_Publication_Divs__c.field-meta.xml
<CustomField>
    <fullName>Last_Booking_Line_Item_Publication_Divs__c</fullName>
    <description>2017-05 AdSales 271</description>
    <label>Last Booking Line Item Publication Divs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>