News UAT/force-app/main/default/objects/AccountReport__c/fields/Last_Booking_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Booking_Modified_Date__c</fullName>
    <description>Date the last related Booking record was modified for use with Dormant Account determination</description>
    <label>Last Booking Modified Date</label>
    <type>Date</type>
</CustomField>