News UAT/force-app/main/default/objects/AccountReport__c/fields/Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Stage__c</fullName>
    <description>Planned - no Bookings, but future business (opps or future bookings) are present
Recent - recent Booking
Repeat - multiple Bookings
At Risk - no future business activities (opps, future bookings)
Lapsed - no business activities (opportunities/future bookings for a certain period of time)
None - newly created Accounts with no planned Opportunities or past Bookings</description>
    <label>Business Activity Lifecycle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned business</fullName>
            </value>
            <value>
                <fullName>Recent business</fullName>
            </value>
            <value>
                <fullName>Repeat business</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>