News UAT/force-app/main/default/objects/AccountReport__c/fields/News_Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>News_Billing_Status__c</fullName>
    <description>NextGen</description>
    <formula>IMAGE(  
CASE( Billing_Status__c, 
&quot;Green&quot;, &quot;/resource/Green&quot;, 
&quot;Amber&quot;,&quot;/resource/Amber&quot;,
&quot;Orange&quot;, &quot;/resource/Orange&quot;, 
&quot;Red&quot;, &quot;/resource/Red&quot;,
&quot;/resource/blank&quot;), 
&quot;Unknown&quot;,25,25)</formula>
    <label>News Credit Status</label>
    <type>Text</type>
</CustomField>