News UAT/force-app/main/default/objects/AccountReport__c/fields/News_Corp_Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>News_Corp_Target_Audience__c</fullName>
    <label>News Corp Target Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alex Small Business Owner</fullName>
            </value>
            <value>
                <fullName>Belinda Women 25-39</fullName>
            </value>
            <value>
                <fullName>Eddie and Jane 18-24s</fullName>
            </value>
            <value>
                <fullName>George and Anne Baby Boomers</fullName>
            </value>
            <value>
                <fullName>Grace Mums with young kids</fullName>
            </value>
            <value>
                <fullName>Henry and Frances Over 65s</fullName>
            </value>
            <value>
                <fullName>Jack and Sarah_rural</fullName>
            </value>
            <value>
                <fullName>James Men 18-34</fullName>
            </value>
            <value>
                <fullName>Joe and Kate Home Owners</fullName>
            </value>
            <value>
                <fullName>Kai Young Gamer 18-24</fullName>
            </value>
            <value>
                <fullName>Kenneth Male Sports fans 25-54</fullName>
            </value>
            <value>
                <fullName>Luke the tradie</fullName>
            </value>
            <value>
                <fullName>Margaret Empty Nester 65+</fullName>
            </value>
            <value>
                <fullName>Matt Passive Job Seekers</fullName>
            </value>
            <value>
                <fullName>Mel and Ben All People 25-54</fullName>
            </value>
            <value>
                <fullName>Mike and Amanda ABs</fullName>
            </value>
            <value>
                <fullName>Mrs Swinburne Mums with kids 5+</fullName>
            </value>
            <value>
                <fullName>Paul and Tess Home Buyers</fullName>
            </value>
            <value>
                <fullName>Renae Women 25-54</fullName>
            </value>
            <value>
                <fullName>Rob Men 25-54</fullName>
            </value>
            <value>
                <fullName>The Bradshaw family Car Buyers</fullName>
            </value>
            <value>
                <fullName>The Ross Clan Families</fullName>
            </value>
            <value>
                <fullName>Tim Male Grocery Buyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>