News UAT/force-app/main/default/objects/AccountReport__c/fields/NEWS_Segment__c.field-meta.xml
<CustomField>
    <fullName>NEWS_Segment__c</fullName>
    <label>NEWS Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>