News UAT/force-app/main/default/objects/AccountReport__c/fields/NewsAdds_Draft_Account__c.field-meta.xml
<CustomField>
    <fullName>NewsAdds_Draft_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is updated from NewsAdds platform. When the field is checked, the record will require some more fields to be automatically updated from NewsAdds.</description>
    <inlineHelpText>Field is updated from NewsAdds platform. When the field is checked, the record will require some more fields to be automatically updated from NewsAdds.</inlineHelpText>
    <label>NewsAdds Draft Account</label>
    <type>Checkbox</type>
</CustomField>