News UAT/force-app/main/default/objects/AccountReport__c/fields/NewsXtend_Auto_Approval_Enabled__c.field-meta.xml
<CustomField>
    <fullName>NewsXtend_Auto_Approval_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When this check box is checked Proofs can be automatically approved after a number of notification reminders are sent to the client.</description>
    <inlineHelpText>When this check box is checked Proofs can be automatically approved after a number of notification reminders are sent to the client. Default is enabled.</inlineHelpText>
    <label>NewsXtend Auto Approval Enabled</label>
    <type>Checkbox</type>
</CustomField>