News UAT/force-app/main/default/objects/AccountReport__c/fields/No_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>No_Parent_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to override the Parent Account required field</inlineHelpText>
    <label>No Parent Account</label>
    <type>Checkbox</type>
</CustomField>