News UAT/force-app/main/default/objects/AccountReport__c/fields/NumberOfEmployees__c.field-meta.xml
<CustomField>
    <fullName>NumberOfEmployees__c</fullName>
    <label>Employees</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>