News UAT/force-app/main/default/objects/AccountReport__c/fields/Old_Current_FY__c.field-meta.xml
<CustomField>
    <fullName>Old_Current_FY__c</fullName>
    <description>For Nextgen. Current Fiscal Year. Updated from billing system.</description>
    <label>Old Current FY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>