News UAT/force-app/main/default/objects/AccountReport__c/fields/Old_Previous_FY__c.field-meta.xml
<CustomField>
    <fullName>Old_Previous_FY__c</fullName>
    <description>For NextGen. Previous Fiscal Year. Updates from billing system</description>
    <label>Old_Previous FY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>