News UAT/force-app/main/default/objects/AccountReport__c/fields/PersonAssistantName__c.field-meta.xml
<CustomField>
    <fullName>PersonAssistantName__c</fullName>
    <label>Assistant</label>
    <length>40</length>
    <type>Text</type>
</CustomField>