News UAT/force-app/main/default/objects/AccountReport__c/fields/PersonAssistantPhone__c.field-meta.xml
<CustomField>
    <fullName>PersonAssistantPhone__c</fullName>
    <label>Asst. Phone</label>
    <type>Phone</type>
</CustomField>