News UAT/force-app/main/default/objects/AccountReport__c/fields/PersonBirthdate__c.field-meta.xml
<CustomField>
    <fullName>PersonBirthdate__c</fullName>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>