News UAT/force-app/main/default/objects/AccountReport__c/fields/PersonDepartment__c.field-meta.xml
<CustomField>
    <fullName>PersonDepartment__c</fullName>
    <label>Department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>