News UAT/force-app/main/default/objects/AccountReport__c/fields/PersonDoNotCall__c.field-meta.xml
<CustomField>
    <fullName>PersonDoNotCall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Call</label>
    <type>Checkbox</type>
</CustomField>