News UAT/force-app/main/default/objects/AccountReport__c/fields/PersonEmail__c.field-meta.xml
<CustomField>
    <fullName>PersonEmail__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>