News UAT/force-app/main/default/objects/AccountReport__c/fields/PersonHasOptedOutOfEmail__c.field-meta.xml
<CustomField>
    <fullName>PersonHasOptedOutOfEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>