News UAT/force-app/main/default/objects/AccountReport__c/fields/PersonHasOptedOutOfFax__c.field-meta.xml
<CustomField>
    <fullName>PersonHasOptedOutOfFax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fax Opt Out</label>
    <type>Checkbox</type>
</CustomField>