News UAT/force-app/main/default/objects/AccountReport__c/fields/PersonHomePhone__c.field-meta.xml
<CustomField>
    <fullName>PersonHomePhone__c</fullName>
    <label>Home Phone</label>
    <type>Phone</type>
</CustomField>