News UAT/force-app/main/default/objects/AccountReport__c/fields/PersonLastCURequestDate__c.field-meta.xml
<CustomField>
    <fullName>PersonLastCURequestDate__c</fullName>
    <label>Last Stay-in-Touch Request Date</label>
    <type>DateTime</type>
</CustomField>