News UAT/force-app/main/default/objects/AccountReport__c/fields/PersonLastCUUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>PersonLastCUUpdateDate__c</fullName>
    <label>Last Stay-in-Touch Save Date</label>
    <type>DateTime</type>
</CustomField>