News UAT/force-app/main/default/objects/AccountReport__c/fields/PersonMailingAddress__c.field-meta.xml
<CustomField>
    <fullName>PersonMailingAddress__c</fullName>
    <label>Mailing Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>