News UAT/force-app/main/default/objects/AccountReport__c/fields/PersonMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>PersonMobilePhone__c</fullName>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>