News UAT/force-app/main/default/objects/AccountReport__c/fields/PersonOtherAddress__c.field-meta.xml
<CustomField>
    <fullName>PersonOtherAddress__c</fullName>
    <label>Other Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>