News UAT/force-app/main/default/objects/AccountReport__c/fields/PersonOtherPhone__c.field-meta.xml
<CustomField>
    <fullName>PersonOtherPhone__c</fullName>
    <label>Other Phone</label>
    <type>Phone</type>
</CustomField>