News UAT/force-app/main/default/objects/AccountReport__c/fields/PersonTitle__c.field-meta.xml
<CustomField>
    <fullName>PersonTitle__c</fullName>
    <label>Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>