News UAT/force-app/main/default/objects/AccountReport__c/fields/Pre_Discount_Price__c.field-meta.xml
<CustomField>
    <fullName>Pre_Discount_Price__c</fullName>
    <label>Pre Discount Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>