News UAT/force-app/main/default/objects/AccountReport__c/fields/Previous_FY__c.field-meta.xml
<CustomField>
    <fullName>Previous_FY__c</fullName>
    <description>NextGen</description>
    <formula>IF( AND(Upper(RecordType.DeveloperName) = &#39;KAC&#39;, ISPICKVAL(Account_Type__c,&#39;Consortium&#39;)),Consortium_Previous_FY__c, ( Previous_FY_Digital__c + Previous_FY_Print__c + Previous_FY_Xtend__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous FY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>