News UAT/force-app/main/default/objects/AccountReport__c/fields/Primary_City__c.field-meta.xml
<CustomField>
    <fullName>Primary_City__c</fullName>
    <label>Primary City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>