News UAT/force-app/main/default/objects/AccountReport__c/fields/Primary_Country__c.field-meta.xml
<CustomField>
    <fullName>Primary_Country__c</fullName>
    <label>Primary Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>