News UAT/force-app/main/default/objects/AccountReport__c/fields/Primary_State__c.field-meta.xml
<CustomField>
    <fullName>Primary_State__c</fullName>
    <label>Primary State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>