News UAT/force-app/main/default/objects/AccountReport__c/fields/Primary_Street__c.field-meta.xml
<CustomField>
    <fullName>Primary_Street__c</fullName>
    <label>Primary Street</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>