News UAT/force-app/main/default/objects/AccountReport__c/fields/Print_Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Print_Customer_Tier__c</fullName>
    <defaultValue>(&quot;New Client&quot;)</defaultValue>
    <description>NextGen - For use with Print pricing discounts</description>
    <label>Print Customer Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAA</fullName>
            </value>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>New Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>