News UAT/force-app/main/default/objects/AccountReport__c/fields/Print_Last_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Print_Last_Transaction_Date__c</fullName>
    <label>Print_Last_Transaction_Date</label>
    <type>Date</type>
</CustomField>