News UAT/force-app/main/default/objects/AccountReport__c/fields/Project_Sunday__c.field-meta.xml
<CustomField>
    <fullName>Project_Sunday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Sunday</label>
    <type>Checkbox</type>
</CustomField>