News UAT/force-app/main/default/objects/AccountReport__c/fields/Prospector_Link__c.field-meta.xml
<CustomField>
    <fullName>Prospector_Link__c</fullName>
    <formula>IF(
ISBLANK(AccountNumber__c),
&#39;&#39;,
HYPERLINK(&quot;http://www.prospector-info.com.au/search_eng.asp?stype=20&amp;search_string=&quot;
+ SUBSTITUTE(AccountNumber__c, &#39; &#39;, &#39;&#39;), AccountNumber__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Look up the ABN in the website www.prospector-info.com.au

You must provide an ABN number first</inlineHelpText>
    <label>Prospector Link</label>
    <type>Text</type>
</CustomField>