News UAT/force-app/main/default/objects/AccountReport__c/fields/Revenue_Group__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Group__c</fullName>
    <inlineHelpText>Revenue Groups are based on the News Corp categorisations that are defined for budget and forecasting reporting. This field will feed into Opportunity and Booking information.</inlineHelpText>
    <label>Revenue Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amusements</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>House</fullName>
            </value>
            <value>
                <fullName>Motor Vehicle Dealers</fullName>
            </value>
            <value>
                <fullName>National (Communications/business equipment)</fullName>
            </value>
            <value>
                <fullName>National (Computers)</fullName>
            </value>
            <value>
                <fullName>National (Finance)</fullName>
            </value>
            <value>
                <fullName>National (Food and beverages)</fullName>
            </value>
            <value>
                <fullName>National (Gambling/gaming)</fullName>
            </value>
            <value>
                <fullName>National (Government/political)</fullName>
            </value>
            <value>
                <fullName>National (Media)</fullName>
            </value>
            <value>
                <fullName>National (Motor Vehicle Manufacturers)</fullName>
            </value>
            <value>
                <fullName>National (Other)</fullName>
            </value>
            <value>
                <fullName>National (Personal care products)</fullName>
            </value>
            <value>
                <fullName>National (Pharmaceutical / Health Products)</fullName>
            </value>
            <value>
                <fullName>National (Travel)</fullName>
            </value>
            <value>
                <fullName>Public Notices</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>