News UAT/force-app/main/default/objects/AccountReport__c/fields/Revenue_Growth_Rate__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Growth_Rate__c</fullName>
    <label>Revenue Growth Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>