News UAT/force-app/main/default/objects/AccountReport__c/fields/Rolling_12_Months_Digital__c.field-meta.xml
<CustomField>
    <fullName>Rolling_12_Months_Digital__c</fullName>
    <label>Rolling 12 Months Digital</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>